--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -4,3 +4,19 @@
 .discriptionBlok{
     padding: 10px;
 }
+.discript{
+    float: top;
+}
+.userAvatar{
+    width: 200px;
+    border-radius: 40px;
+}
+
+.contacts {
+    padding-left: 10px;
+}
+.formSummaryError {
+    border: solid red 1px;
+    padding:  5px;
+    color: red;
+}
